--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/httpmime-4.2.4.jar"/>
 	<classpathentry kind="lib" path="libs/httpcore-4.2.4.jar"/>
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/GitHub/hostdiscovery/libs/jnetpcapwindows_1.3.0/jnetpcap-1.3.0/jnetpcap.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
